--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -7,20 +7,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
 
-      <li ngbDropdown class="nav-item dropdown">
+      <ng-template #anonymousUser>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/auth/login">Login</a>  <a class="nav-link" routerLink="/auth/register">Registration</a>
+        </li>
+      </ng-template>
+
+      <li ngbDropdown *ngIf="user ; else anonymousUser" class="nav-item dropdown">
         <a ngbDropdownToggle class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Username
+        {{ user.email }}
         </a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
-
-          <a class="dropdown-item" routerLink="admin/categories">Manage categories</a>
-          <a class="dropdown-item" routerLink="admin/products">Manage products</a>
-          <a class="dropdown-item" >Logout</a>
+          <ng-container *ngIf="user.isAdmin">
+          <a class="dropdown-item" routerLink="/admin/categories">Manage categories</a>
+          <a class="dropdown-item" routerLink="/admin/products">Manage products</a>
+          </ng-container>
+          <a class="dropdown-item" (click) = "logout()">Logout</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
+
     </ul>
 
   </div>
