--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <auth-form (submitAuth)="login($event)">
   <h1>Login</h1>
   <a routerLink="/auth/register">Not registered?</a>
-  <button type="submit">
+  <button type="submit" class="btn btn-primary">
     Login
   </button>
   <div class="error" *ngIf="error">
