--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,15 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" routerLink="/">IS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+    <ul class="navbar-nav">
 
       <ng-template #anonymousUser>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/auth/login">Login</a>  <a class="nav-link" routerLink="/auth/register">Registration</a>
+        <li class="nav-item item-auth">
+          <a class="nav-link" routerLink="/auth/login">Login</a> / <a class="nav-link" routerLink="/auth/register">Registration</a>
         </li>
       </ng-template>
 
