--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+.vertical-align-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+main{
+  padding-top:2rem;
+}
+
+
+@media (max-width: 768px) {
+  .md-full-width {
+    width:100%;
+  }
+}
+
+
+.card{
+  position:relative;
+  .ico{
+    position:absolute;
+    width:4rem;
+    height:4rem;
+    top:0.4rem;
+    right:0.4rem;
+    background:url('/assets/images/bestseller.png');
+    background-size: cover;
+  }
+}
 
