--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,11 @@
 <is-header></is-header>
 
 <main role="main" class="container">
-
   <div class="starter-template">
-
     <router-outlet></router-outlet>
   </div>
-
 </main><!-- /.container -->
+
+<is-footer></is-footer>
 
 
