--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,8 +4,12 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-    <ul class="navbar-nav">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav justify-content-space-between">
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/products">Shop</a>
+      </li>
 
       <ng-template #anonymousUser>
         <li class="nav-item item-auth">
@@ -13,7 +17,7 @@
         </li>
       </ng-template>
 
-      <li ngbDropdown *ngIf="user ; else anonymousUser" class="nav-item dropdown">
+      <li ngbDropdown placement="bottom-right" *ngIf="user ; else anonymousUser" class="nav-item dropdown" >
         <a ngbDropdownToggle class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         {{ user.email }}
         </a>
