--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer font-small bg-dark">
+<footer class="footer font-small bg-dark navbar-fixed-bottom">
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2018 Copyright:
