--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <is-header></is-header>
 
-<main role="main" class="container">
+<main role="main" class="container pt-3" >
   <div class="starter-template">
     <router-outlet></router-outlet>
   </div>
