--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
   <button type="submit" class="btn btn-primary">
     Login
   </button>
-  <div class="error" *ngIf="error">
+  <div class="error mb-3 text-danger" *ngIf="error">
     {{ error }}
   </div>
 </auth-form>
