--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,17 +1,21 @@
-.dropdown-toggle{
-  cursor:pointer;
-}
-.navbar-nav .nav-item:first-child{
-  margin-right: auto;
+.dropdown-toggle {
+  cursor: pointer;
 }
 
-.navbar-nav{
-  display:flex;
-  width:100%;
+.navbar-nav {
+  display: flex;
+  width: 100%;
+
+  .nav-item {
+    &:first-child {
+      margin-right: auto;
+    }
+  }
 }
-.item-auth{
+
+.item-auth {
   color: rgba(255, 255, 255, 0.5);
-  .nav-link{
+  .nav-link {
     display: inline-block;
   }
 
