--- a/src/app/shop/shop-menu/shop-menu.component.html
+++ b/src/app/shop/shop-menu/shop-menu.component.html
@@ -2,21 +2,21 @@
   <div class="sidebar-sticky">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link" [class.active]="!categoryKey" routerLink="/products"
-      >All Categories</a>
-
+        <a class="nav-link"
+           routerLink="/products"
+           routerLinkActive="active"
+           [routerLinkActiveOptions]="{exact:true}">
+          All Categories
+        </a>
       </li>
       <li class="nav-item" *ngFor="let cat of categories$ | async">
         <a class="nav-link"
            [routerLink]="['/products/', cat.key]"
-
-
-        [class.active]="category === cat.key">
+           routerLinkActive="active">
           {{ cat.name }}
         </a>
-
       </li>
-      </ul>
-</div>
+    </ul>
+  </div>
 </nav>
 
