--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,9 +1,14 @@
+<ng-template #dataLoading>
+  Data is loading
+</ng-template>
+
+<ng-container *ngIf="loaded ; else dataLoading">
 <h1 *ngIf="productId">Edit product</h1>
 <h1 *ngIf="!productId">Add product</h1>
 
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6 mb-0 mb-sm-3">
     <form [formGroup]="productForm" (ngSubmit)="save()">
       <div class="form-group">
         <label for="title">Title</label>
@@ -39,8 +44,6 @@
             min="0.00"
             step="0.01"
           />
-
-
         </div>
 
 
@@ -107,11 +110,11 @@
       </div>
 
       <div class="row">
-        <div class="col-md-6 text-left">
-          <button [disabled]="productForm.invalid" class="btn btn-primary md-full-width">Save</button>
+        <div class="col-md-6 text-left mb-3">
+          <button [disabled]="productForm.invalid" class="btn btn-primary btn-block">Save</button>
         </div>
         <div class="col-md-6 text-right">
-          <button *ngIf="productId" (click)="delete()" type="button" class="btn btn-danger md-full-width">Delete</button>
+            <button type="button" (click)="cancel()" class="btn btn-secondary btn-block">Cancel</button>
         </div>
 
       </div>
@@ -119,7 +122,7 @@
 
     </form>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-6 mb-0 mb-sm-3">
     <div *ngIf="title.value && title.valid" class="card">
       <div class="ico" *ngIf="isBestseller.value"></div>
       <img *ngIf="imageUrl.value && imageUrl.valid" class="card-img-top" [src]="imageUrl.value" alt="{{ title.value }}">
@@ -132,3 +135,4 @@
   </div>
 </div>
 
+</ng-container>
