--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,9 +1,7 @@
-<footer class="footer font-small bg-dark navbar-fixed-bottom">
-
+<footer class="footer font-small bg-dark">
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2018 Copyright:
+  <div class="footer-copyright text-center">© {{ today | date: 'yyyy' }} Copyright:
     <a href="https://mdbootstrap.com/bootstrap-tutorial/"> Ishop.com</a>
   </div>
   <!-- Copyright -->
-
 </footer>
