--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,8 +1,13 @@
 :host{
+  position: absolute;
+  bottom: 0;
   width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
   color: rgba(255, 255, 255, 0.5);
   a{
     color: rgba(255, 255, 255, 0.5);
     text-decoration:underline;
   }
 }
+
