--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,8 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand navbar-dark bg-dark">
   <a class="navbar-brand" routerLink="/">IS</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav justify-content-space-between">
@@ -13,19 +10,21 @@
 
       <ng-template #anonymousUser>
         <li class="nav-item item-auth">
-          <a class="nav-link" routerLink="/auth/login">Login</a> / <a class="nav-link" routerLink="/auth/register">Registration</a>
+          <a class="nav-link" routerLink="/auth/login">Login</a> /
+          <a class="nav-link" routerLink="/auth/register">Registration</a>
         </li>
       </ng-template>
 
-      <li ngbDropdown placement="bottom-right" *ngIf="user ; else anonymousUser" class="nav-item dropdown" >
-        <a ngbDropdownToggle class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        {{ user.email }}
+      <li ngbDropdown placement="bottom-right" *ngIf="user ; else anonymousUser" class="nav-item dropdown">
+        <a ngbDropdownToggle class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
+          {{ user.email }}
         </a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
           <ng-container *ngIf="user.isAdmin">
-          <a class="dropdown-item" routerLink="/admin/products">Manage products</a>
+            <a class="dropdown-item" routerLink="/admin/products">Manage products</a>
           </ng-container>
-          <a class="dropdown-item" (click) = "logout()">Logout</a>
+          <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
       </li>
 
