--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,17 +1,13 @@
 <div *ngIf="product.title" class="card">
   <div class="ico" *ngIf="product.isBestseller"></div>
   <img *ngIf="product.imageUrl" class="card-img-top" [src]="product.imageUrl" alt="{{ product.title }}"/>
-  <!--<div class="card-img-top" *ngIf="product.imageUrl" [ngStyle]="{'background-image': 'url(' + product.imageUrl + ')'}"></div>-->
   <div class="card-body">
     <h4 class="card-title">{{ product.title }}</h4>
     <p class="card-text">{{ product.price | currency }}</p>
   </div>
   <div class="card-footer">
-    <button
-      class="btn btn-secondary btn-block">Add to Cart</button>
-    <!--<ng-template #updateQuantity>
-      <product-quantity [product]="product" [shopping-cart]="shoppingCart">
-      </product-quantity>
-    </ng-template>-->
+    <button disabled="disabled"
+      class="btn btn-secondary btn-block">Add to Cart
+    </button>
   </div>
 </div>
