--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -1,3 +1,5 @@
-.navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5);
+.navbar-dark {
+  .nav-link {
+    color: rgba(255, 255, 255, 0.5);
+  }
 }
