--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,83 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
-.vertical-align-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
 }
-
-main{
-  padding-top:2rem;
-}
-
-
-@media (max-width: 768px) {
-  .md-full-width {
-    width:100%;
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+  > .container {
+    padding: 60px 15px 0;
   }
 }
 
 
-.card{
-  position:relative;
-  .ico{
-    position:absolute;
-    width:4rem;
-    height:4rem;
-    top:0.4rem;
-    right:0.4rem;
-    background:url('/assets/images/bestseller.png');
-    background-size: cover;
-  }
-}
-/*
-.item {
-  padding: 0;
-width:100%;
-  background-color: crimson;
-  color: #fff;
-  font-size: 50px;
-  line-height: 300px;
-  text-align: center;
-}
-.item-carousel{
-  width:100%;
-  text-align:center;
-}
-
-.item img {
- max-width:2000px;
-  max-height:200px;
-}
-*/
-.item{
- position:relative;
-
-
-}
-.item img{
-  width:100%;
-  height: auto;
-
-
-}
-
-.item span{
-  position:absolute;
-  display:block;
-}
-.item-carousel{
-display: block;
-  position:relative;
-  width:100%;
-margin:0;
-  padding:0;
-  height:inherit;
-}
-
-.carousel-control-prev, .carousel-control-next {
-  background:transparent;
-  border:0;
-  cursor:pointer;
-}
