--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -24,7 +24,7 @@
           <ng-container *ngIf="user.isAdmin">
             <a class="dropdown-item" routerLink="/admin/products">Manage products</a>
           </ng-container>
-          <a class="dropdown-item" (click)="logout()">Logout</a>
+          <a class="dropdown-item" routerLink="" (click)="logout()">Logout</a>
         </div>
       </li>
 
